src/app/dashboard/dashboard.component.scss
.grid {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
    grid-gap: 15px;

    @media (min-width: 768px) {
        grid-gap: 30px;
        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
    }
}

.stat-card {
    padding: 15px;
    background: #333;

    @media (min-width: 768px) {
        padding: 25px;
    }
}

.col-heading {
    text-align: center;
    font-size: 14px;
    color: #fff;
    margin: 0;
    margin-bottom: 15px;

    @media (min-width: 768px) {
        font-size: 30px;
    }
}

.col-count {
    text-align: center;
    font-size: 22px;
    color: #fff;
    margin: 0;

    @media (min-width: 768px) {
        font-size: 45px;
    }
}

.col-content {
    align-self: center;
}

.grid-charts {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(142px, 1fr));
    grid-gap: 30px;
    margin-top: 30px;
    overflow: hidden;

    @media (min-width: 768px) {
        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
    }

    .col {
        background-color: #333;
        padding: 25px;
        overflow-x: auto;

        h2 {
            color: #fff;
            font-size: 18px;
            margin-top: 0;
            @media (min-width: 768px) {
                grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
                font-size: 1.5em;
                margin-top: 0;
            }
        }
    }
}
///@extend

.data-list {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(154px, 1fr));
    gap: 15px;
    max-height: 400px;
    overflow-y: scroll;

    @media (min-width: 768px) {
        gap: 30px;
        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
    }
    &__data {
        background: #111;
        width: 100%;
        padding: 25px;
        margin-bottom: 25px;

        &:last-of-type {
            margin-bottom: 0;
        }

        @media (min-width: 768px) {
            &:last-of-type {
                margin-bottom: 25px;
            }
        }

        h3,
        p {
            color: #fff;
            padding: 0;
            margin: 0;
        }

        p {
            margin-top: 5px;
        }
        button {
            margin-top: 15px;
            width: 100%;
        }
    }
}

